--- a/frontend/assets/translations/zh_CN.json
+++ b/frontend/assets/translations/zh_CN.json
@@ -105,5 +105,6 @@
     "Share": "分享",
     "Set As Admin": "设为管理员",
     "Set As User": "设为用户",
-    "Comment": "评论"
+    "Comment": "评论",
+    "Move the slider to correct position": "移动滑块到正确位置"
 }
