--- a/frontend/assets/translations/zh_TW.json
+++ b/frontend/assets/translations/zh_TW.json
@@ -105,5 +105,6 @@
     "Share": "分享",
     "Set As Admin": "設為管理員",
     "Set As User": "設為使用者",
-    "Comment": "評論"
+    "Comment": "評論",
+    "Move the slider to correct position": "移動滑塊到正確位置"
 }
