--- a/frontend/assets/translations/zh_CN.json
+++ b/frontend/assets/translations/zh_CN.json
@@ -106,5 +106,7 @@
     "Set As Admin": "设为管理员",
     "Set As User": "设为用户",
     "Comment": "评论",
-    "Move the slider to correct position": "移动滑块到正确位置"
+    "Move the slider to correct position": "移动滑块到正确位置",
+    "Delete Post": "删除文章",
+    "Are you sure you want to delete this post?" : "你确定要删除这篇文章吗？"
 }
