--- a/frontend/assets/translations/zh_CN.json
+++ b/frontend/assets/translations/zh_CN.json
@@ -108,5 +108,8 @@
     "Comment": "评论",
     "Move the slider to correct position": "移动滑块到正确位置",
     "Delete Post": "删除文章",
-    "Are you sure you want to delete this post?" : "你确定要删除这篇文章吗？"
+    "Are you sure you want to delete this post?" : "你确定要删除这篇文章吗？",
+    "Site Name": "站点名称",
+    "Site Description": "站点描述",
+    "Site Icon": "站点图标"
 }
