--- a/frontend/assets/translations/zh_TW.json
+++ b/frontend/assets/translations/zh_TW.json
@@ -108,5 +108,8 @@
     "Comment": "評論",
     "Move the slider to correct position": "移動滑塊到正確位置",
     "Delete Post": "刪除文章",
-    "Are you sure you want to delete this post?" : "你確定要刪除這篇文章嗎？"
+    "Are you sure you want to delete this post?" : "你確定要刪除這篇文章嗎？",
+    "Site Name": "站點名稱",
+    "Site Description": "站點描述",
+    "Site Icon": "站點圖示"
 }
