show image page & bug fixes

--- a/frontend/assets/translations/zh_TW.json
+++ b/frontend/assets/translations/zh_TW.json
@@ -111,5 +111,7 @@
     "Are you sure you want to delete this post?" : "你確定要刪除這篇文章嗎？",
     "Site Name": "站點名稱",
     "Site Description": "站點描述",
-    "Site Icon": "站點圖示"
+    "Site Icon": "站點圖示",
+    "Save Image": "儲存圖片",
+    "Copied": "已複製"
 }
