--- a/frontend/assets/translations/zh_CN.json
+++ b/frontend/assets/translations/zh_CN.json
@@ -111,5 +111,7 @@
     "Are you sure you want to delete this post?" : "你确定要删除这篇文章吗？",
     "Site Name": "站点名称",
     "Site Description": "站点描述",
-    "Site Icon": "站点图标"
+    "Site Icon": "站点图标",
+    "Save Image": "保存图片",
+    "copied": "已复制"
 }
